hledger/test/errors/csvamountparse.csv.rules
skip 2
date %1
amount %2
